# QA-Performance-Tests

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  test.sh
artillery/: facadecreatequestions.yaml  facadecreateuser.yaml  functions.js  getboxesbyuserid.yaml  getgemsbyuserid.yaml  getinterestsinboxesbyuserid.yaml  getinterestsperlevel.yaml  getlessonsbyuserid.yaml  getlevelzerointerests.yaml  getunlockedinterestsbyuserid.yaml  getuserbyid.yaml  interests.json  levels.csv  levelzerointerests.csv  package-lock.json  package.json  result.json  streakbyuser.yaml  updateinterestsselectedbyuserid.yaml  userids.csv  users.csv
artillery/results/: result_pf_facadecreateuser.json  result_pf_getlevelzerointerests.json
python-scripts/: common_constants.py  csv_utils.py  decorators.py  delete_users_data.py  firestore_utils.py  get_users_data_and_export_to_csv.py  load_dummy_users_data.py  providers.py
